versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
= Dynamically Provisioning New Storage in {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2025-09-12
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/dynamically-provision-new-storage.adoc 
:product-path: cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-longhorn: xref:integrations/longhorn/longhorn.adoc
:xref-set-up-cloud-providers: xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
:xref-unsupported-storage-drivers: xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-longhorn: xref:integrations-in-rancher/longhorn/index.adoc
:xref-set-up-cloud-providers: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/index.adoc
:xref-unsupported-storage-drivers: xref:how-to-guides/advanced-user-guides/enable-experimental-features/unsupported-storage-drivers.adoc
endif::[]

This section describes how to provision new persistent storage for workloads in Rancher.

This section assumes that you understand the Kubernetes concepts of storage classes and persistent volume claims. For more information, refer to the section on xref:cluster-admin/manage-clusters/persistent-storage/about-persistent-storage.adoc[how storage works.]

New storage is often provisioned by a cloud provider such as Amazon EBS. However, new storage doesn't have to be in the cloud.

If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see {xref-longhorn}[Cloud Native Storage with Longhorn].

To provision new storage for your workloads, follow these steps:

. <<_1_add_a_storage_class_and_configure_it_to_use_your_storage,Add a storage class and configure it to use your storage.>>
. <<_2_use_the_storage_class_for_pods_deployed_with_a_statefulset,Use the Storage Class for Pods Deployed with a StatefulSet.>>

== Prerequisites

* To set up persistent storage, the `Manage Volumes` {xref-cluster-project-roles}#_project_role_reference[role] is required.
* If you are provisioning storage for a cluster hosted in the cloud, the storage and cluster hosts must have the same cloud provider.
* The cloud provider must be enabled. For details on enabling cloud providers, refer to {xref-set-up-cloud-providers}[this page.]
* Make sure your storage provisioner is available to be enabled.

The following storage provisioners are enabled by default:

|===
| Name | Plugin

| Amazon EBS Disk
| `aws-ebs`

| AzureFile
| `azure-file`

| AzureDisk
| `azure-disk`

| Google Persistent Disk
| `gce-pd`

| VMware vSphere Volume
| `vsphere-volume`

| Local
| `local`

| Network File System
| `nfs`

| hostPath
| `host-path`
|===

To use a storage provisioner that is not on the above list, you will need to use a {xref-unsupported-storage-drivers}[feature flag to enable unsupported storage drivers.]

== 1. Add a storage class and configure it to use your storage

These steps describe how to set up a storage class at the cluster level.

. Click *☰ > Cluster Management*.
. Go to the cluster where you want to dynamically provision persistent storage volumes and click *Explore*.
. Click menu:Storage[Storage Classes].
. Click *Create*.
. Enter a name for your storage class.
. From the *Provisioner* drop-down, select the service that you want to use to dynamically provision storage volumes. For example, if you have a Amazon EC2 cluster and you want to use cloud storage for it, use the `Amazon EBS Disk` provisioner.
. In the *Parameters* tab, fill out the information required for the service to dynamically provision storage volumes. Each provisioner requires different information to dynamically provision storage volumes. Consult the service's documentation for help on how to obtain this information.
. Click *Create*.

*Result:* The storage class is available to be consumed by a PVC.

For full information about the storage class parameters, refer to the official https://kubernetes.io/docs/concepts/storage/storage-classes/#parameters[Kubernetes documentation.].

== 2. Use the Storage Class for Pods Deployed with a StatefulSet

StatefulSets manage the deployment and scaling of Pods while maintaining a sticky identity for each Pod. In this StatefulSet, we will configure a VolumeClaimTemplate. Each Pod managed by the StatefulSet will be deployed with a PersistentVolumeClaim based on this VolumeClaimTemplate. The PersistentVolumeClaim will refer to the StorageClass that we created. Therefore, when each Pod managed by the StatefulSet is deployed, it will be bound to dynamically provisioned storage using the StorageClass defined in its PersistentVolumeClaim.

. Click *☰ > Cluster Management*.
. Go to the cluster where you want to add use the StorageClass for a workload and click *Explore*.
. In the left navigation bar, click *Workload*.
. Click *Create*.
. Click *StatefulSet*.
. In the *Volume Claim Templates* tab, click *Add Claim Template*.
. Enter a name for the persistent volume.
. In the *StorageClass* field, select the StorageClass that will dynamically provision storage for pods managed by this StatefulSet.
. In the *Mount Point* field, enter the path that the workload will use to access the volume.
. Click *Launch*.

*Result:* When each Pod managed by the StatefulSet is deployed, it will make a request for the specified amount of disk space to the Kubernetes master. If a PV with the specified resources is available when the workload is deployed, the Kubernetes master will bind the PV to Pod with a compatible PVC.

To attach the PVC to an existing workload,

. Click *☰ > Cluster Management*.
. Go to the cluster where you want to add use the StorageClass for a workload and click *Explore*.
. In the left navigation bar, click *Workload*.
. Go to the workload that will use storage provisioned with the StorageClass that you cared at click *⋮ > Edit Config*.
. In the *Volume Claim Templates* section, click *Add Claim Template*.
. Enter a persistent volume name.
. In the *StorageClass* field, select the StorageClass that will dynamically provision storage for pods managed by this StatefulSet.
. In the *Mount Point* field, enter the path that the workload will use to access the volume.
. Click *Save*.

*Result:* The workload will make a request for the specified amount of disk space to the Kubernetes master. If a PV with the specified resources is available when the workload is deployed, the Kubernetes master will bind the PV to the PVC. If not, Rancher will provision new persistent storage.
